Fixed an issue where it would show warning signs on the database and effectively added the main class